--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/nickwojt/team-generator#readme",
   "dependencies": {
+    "inquirer": "^8.1.2",
     "jest": "^27.0.6"
   }
 }
